# BatController-Firmware

./: BatController-Firmware.ino  CMakeLists.txt
data/: logo.raw
data/DriveDir/: Arrow0.raw  Arrow1.raw
src/: BatTheme.cpp  BatTheme.h  DataBuffer.cpp  DataBuffer.h  FSLVGL.cpp  FSLVGL.h  FeedService.cpp  FeedService.h  InputLVGL.cpp  InputLVGL.h  LVGIF.cpp  LVGIF.h  LowBatteryService.cpp  LowBatteryService.h  Model.hpp  NetworkConfig.cpp  NetworkConfig.h  PairService.cpp  PairService.h  ShutdownService.cpp  ShutdownService.h  WiFiService.cpp  WiFiService.h
src/Aruco/: Aruco.cpp  Aruco.h  ArucoDictionary.h
src/Arucogen/: ArucoDictionary.h  Arucogen.cpp  Arucogen.h
src/Driver/: AutoControls.cpp  AutoControls.h  BallDriver.cpp  BallDriver.h  DanceDriver.cpp  DanceDriver.h  Driver.cpp  Driver.h  ManualDriver.cpp  ManualDriver.h  MarkerDriver.cpp  MarkerDriver.h  SimpleProgDriver.cpp  SimpleProgDriver.h
src/Elements/: BallHueElement.cpp  BallHueElement.h  BatLogo.cpp  BatLogo.h  BatsZoomElement.cpp  BatsZoomElement.h  BatteryElement.cpp  BatteryElement.h  BoostElement.cpp  BoostElement.h  DanceElement.cpp  DanceElement.h  DriveDirectionElement.cpp  DriveDirectionElement.h  GeneralInfoElement.cpp  GeneralInfoElement.h  HueModal.cpp  HueModal.h  IntroScreen.cpp  IntroScreen.h  LineStatusElement.cpp  LineStatusElement.h  LowBatteryModal.cpp  LowBatteryModal.h  MarkerActionElement.cpp  MarkerActionElement.h  MessageModal.cpp  MessageModal.h  OverrideElement.cpp  OverrideElement.h  ProgPlaybackElement.cpp  ProgPlaybackElement.h  Prompt.cpp  Prompt.h  SignalElement.cpp  SignalElement.h  SpeedModal.cpp  SpeedModal.h
src/Feed/: DoubleBuffer.h  Feed.cpp  Feed.h
src/Interface/: LVModal.cpp  LVModal.h  LVScreen.cpp  LVScreen.h  LVSelectable.h
src/JigHWTest/: JigHWTest.cpp  JigHWTest.h  SPIFFSChecksum.hpp
src/Modules/: AcceleroModule.cpp  AcceleroModule.h  Module.cpp  Module.h  VibroModule.cpp  VibroModule.h
src/Screens/: DriveScreen.cpp  DriveScreen.h  IntroScreen.cpp  IntroScreen.h  MainMenu.cpp  MainMenu.h  PairScreen.cpp  PairScreen.h  SettingsScreen.cpp  SettingsScreen.h
src/Screens/PairScreenElements/: Connecting.cpp  Connecting.h  Error.cpp  Error.h  InputPS.cpp  InputPS.h  ScanAruco.cpp  ScanAruco.h  ScanQR.cpp  ScanQR.h  WiFiScanning.cpp  WiFiScanning.h
src/Screens/SimpleProg/: ActionEditModal.cpp  ActionEditModal.h  ActionPickModal.cpp  ActionPickModal.h  ProgEditScreen.cpp  ProgEditScreen.h  SimpleProgModel.cpp  SimpleProgModel.h  SimpleProgScreen.cpp  SimpleProgScreen.h  Storage.cpp  Storage.h
src/States/: Broadcast.cpp  Broadcast.h  PairService.cpp  PairService.h  State.cpp  State.h
